Compiler on JDK8, but not on JDK13